# suntan

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: basic_calls.rs  curse.rs
java_wrapper/: dependency-reduced-pom.xml  pom.xml
java_wrapper/src/main/java/org/lucky/: ShardReader.java
java_wrapper/src/main/java/org/suntan/: ShardReader.java
src/: curse.rs  main.rs  practice.rs
tests/resources/: _0.cfe  _0.cfs  _0.si  _1.fdt  _b.dii  _b.dim  _b.fdt  _b.fdx  _b.fnm  _b.nvd  _b.nvm  _b.si  _b_1.fnm  _b_1_Lucene80_0.dvd  _b_1_Lucene80_0.dvm  _b_Lucene80_0.dvd  _b_Lucene80_0.dvm  _b_Lucene84_0.doc  _b_Lucene84_0.pos  _b_Lucene84_0.tim  _b_Lucene84_0.tip  _c.cfe  _c.cfs  _c.si  _d.cfe  _d.cfs  _d.si  _e.cfe  _e.cfs  _e.si  _f.cfe  _f.cfs  _f.si  _g.cfe  _g.cfs  _g.si  _h.cfe  _h.cfs  _h.si  _h_1.fnm  (+6 more)
