[package]
name = "lucky"
version = "0.1.1"
authors = ["alex <bigbadmath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
j4rs = "0.13"
tantivy = "0.15"
clap = "3.0.0-beta.2"
serde_json = "1.0"


[dev-dependencies]
cursive = "0.16"
