[package]
name = "suntan"
version = "0.1.2"
authors = ["alex <bigbadmath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
j4rs = "0.13"
tantivy = "0.15"
clap = "3.0.0-beta.2"
serde_json = "1.0"
anyhow = "1"
log = "0.4"
env_logger = "0.8"
chrono = "0.4"


[dev-dependencies]
cursive = "0.16"
